--- a/page1.html
+++ b/page1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/renan-lemes.github.io/CSS/style_page1.css">
-    <link rel = "icon" href="/renan-lemes.github.io/Images/sciece.png">
+    <link rel="stylesheet" href="./CSS/style_page1.css">
+    <link rel = "icon" href="./Images/sciece.png">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <title>Renan Lemes</title>
 
@@ -17,7 +17,7 @@
                         <button class="Contato">Contato</button>
                         <button class="Projetos">Projetos</button>
 
-                        <img src="/renan-lemes.github.io/Images/Mi_Violin.jpg" alt="">
+                        <img src="./Images/Mi_Violin.jpg" alt="">
                         <h1>Renan Lemes</h1>
                         <h3 class="texto">Aluno: Matemática Aplicada e Computacional.</h2>
                         <h3 class="texto">Instituição: Universidade Estadual Centro-Oeste.</h3>
@@ -36,15 +36,15 @@
                         </aside>
                         <h2 class="Contatos">Contatos:</h2>
                         <button class="Email">
-                            <img class="imgEmail" src="/renan-lemes.github.io/Images/Icon_Email.png" alt="">
+                            <img class="imgEmail" src="./Images/Icon_Email.png" alt="">
                             E-mail
                         </button>
                         <button class="Insta">
-                            <img class="ImgInsta" src="/renan-lemes.github.io/Images/Icon_instagram.png" alt="">
+                            <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
                             Instagram
                         </button>
                         <button class="Linkedin">
-                            <img class="imgLink" src="/renan-lemes.github.io/Images/Icone_linkdin.png" alt="">
+                            <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
                             Linkedin
                         </button>
                     </main> 
