Ajuste da pagina 10.1

--- a/page1.html
+++ b/page1.html
@@ -47,6 +47,7 @@
                             <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
                             Linkedin
                         </button>
+                        <footer class="cabeçario"></footer>
                     </main> 
                 </div>
             </div>
