REFACTOR: excluindo arquivos

--- a/page1.html
+++ b/page1.html
@@ -18,7 +18,7 @@
                         <button class="Contato" onclick="" >Contato</button>
                         <button class="Projetos" onclick="" >Projetos</button>
 
-                        <img src="./Images/Mi_Violin.jpg" alt="">
+                        <img src="./Images/Renan_lemes.jpeg" alt="">
                         <h1>Renan Lemes</h1>
                         <h3 class="texto">Aluno: Matemática Aplicada e Computacional.</h2>
                         <h3 class="texto">Instituição: Universidade Estadual Centro-Oeste.</h3>
