--- a/page1.html
+++ b/page1.html
@@ -1,57 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/style_page1.css">
     <link rel="stylesheet" href="./CSS/Animation.css">
-    <link rel = "icon" href="./Images/sciece.png">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="icon" href="./Images/sciece.png">
+    <link rel='stylesheet' href="/CSS/Button.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@100;200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <title>Renan Lemes</title>
 
 </head>
-    <body>
-            <div class="titulo">
-                <div class="animate-apper container">
-                    <header>
-                        <button class=" Home" onclick="window.location.reload()">Home</button>
-                        <button class="Contato" onclick="" >Contato</button>
-                        <button class="Projetos" onclick="" >Projetos</button>
 
-                        <img src="./Images/Renan_lemes.jpeg" alt="">
-                        <h1>Renan Lemes</h1>
-                        <h3 class="texto">Aluno: Matemática Aplicada e Computacional.</h2>
-                        <h3 class="texto">Instituição: Universidade Estadual Centro-Oeste.</h3>
-                        <h3 class="texto">Sobre:</h3>
-                    </header>
-                    <main>
-                        <h3 class="texto-pre">Préfacio</h5>
-                        <div class="Prefacio">
-                        </div>
-                        <h2 class="Projeto">Projetos:</h2>
-                        <aside>
-                            <div class="retangulo1"></div>
-                            <div class="retangulo2"></div>
-                            <div class="retangulo3"></div>
-                            <div class="retangulo4"></div>
-                        </aside>
-                        <h2 class="Contatos">Contatos:</h2>
-                        <button class="Email" onclick="">
-                            <img class="imgEmail" src="./Images/Icon_Email.png" alt="">
-                            E-mail
-                        </button>
-                        <button class="Insta" onclick="">
-                            <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
-                            Instagram
-                        </button>
-                        <button class="Linkedin" onclick="">
-                            <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
-                            Linkedin
-                        </button>
-                        <footer class="cabeçario"></footer>
-                    </main> 
-                </div>
-            </div>
-            <script src="/scripts/page1.js"></script>
-    </body>
+<body>
+    <div class="titulo">
+        <div class="animate-apper container">
+            <header>
+                <button class=" Home" onclick="window.location.reload()">Home</button>
+                <button class="Contato" onclick="">Contato</button>
+                <button class="Projetos" onclick="">Projetos</button>
+
+                <img src="./Images/Renan_lemes.jpeg" alt="">
+                <h1>Renan Lemes</h1>
+                <h3 class="texto">Aluno: Matemática Aplicada e Computacional.</h2>
+                    <h3 class="texto">Instituição: Universidade Estadual Centro-Oeste.</h3>
+                    <h3 class="texto">Sobre:</h3>
+            </header>
+            <main>
+                <h3 class="texto-pre">Préfacio</h5>
+                    <div class="Prefacio">
+                    </div>
+                    <h2 class="Projeto">Projetos:</h2>
+                    <aside>
+                        <button class="retangulo1"></button>
+                        <button class="retangulo2"></button>
+                        <button class="retangulo3"></button>
+                        <button class="retangulo4"></button>
+                    </aside>
+                    <h2 class="Contatos">Contatos:</h2>
+                    <button class="Email" onclick="">
+                        <img class="imgEmail" src="./Images/Icon_Email.png" alt="">
+                        E-mail
+                    </button>
+                    <button class="Insta" onclick="">
+                        <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
+                        Instagram
+                    </button>
+                    <button class="Linkedin" onclick="">
+                        <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
+                        Linkedin
+                    </button>
+                    <footer class="cabeçario"></footer>
+            </main>
+        </div>
+    </div>
+    <script src="/scripts/page1.js"></script>
+</body>
+
 </html>
