CHORES: Arrumei o container e os botoes

--- a/page1.html
+++ b/page1.html
@@ -23,10 +23,16 @@
                 <button class="Projetos" onclick="">Projetos</button>
 
                 <img src="./Images/Renan_lemes.jpeg" alt="">
-                <h1>Renan Lemes</h1>
+                <h1>Renan Lemes Leepkaln</h1>
                 <h3 class="texto">Aluno: Matemática Aplicada e Computacional.</h2>
                     <h3 class="texto">Instituição: Universidade Estadual Centro-Oeste.</h3>
-                    <h3 class="texto">Sobre:</h3>
+                    <h3 class="texto">Sobre:
+                    </h3>
+                    <h3 class="texto">
+                        Sou Renan Lemes Leepkaln, estou no 4° ano de matemática aplicada, desenvolvi esse portfolio
+                        tanto para melhorar minha programação, e também para mostrar algumas aplições feitas. 🦂
+                    </h3>
+                </h3>
             </header>
             <main>
                 <h3 class="texto-pre">Préfacio</h5>
@@ -40,18 +46,20 @@
                         <button class="retangulo4"></button>
                     </aside>
                     <h2 class="Contatos">Contatos:</h2>
-                    <button class="Email" onclick="">
-                        <img class="imgEmail" src="./Images/Icon_Email.png" alt="">
-                        E-mail
-                    </button>
-                    <button class="Insta" onclick="">
-                        <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
-                        Instagram
-                    </button>
-                    <button class="Linkedin" onclick="">
-                        <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
-                        Linkedin
-                    </button>
+                    <a class="Container-triangle">
+                        <button class="Git" onclick="">
+                            <img class="imgGit" src="./Images/Git_image.png" alt="">
+                            Git
+                        </button>
+                        <button class="Insta" onclick="">
+                            <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
+                            Instagram
+                        </button>
+                        <button class="Linkedin" onclick="">
+                            <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
+                            Linkedin
+                        </button>
+                    </a>
                     <footer class="cabeçario"></footer>
             </main>
         </div>
