CHORES:Arrumando alguns erros

--- a/page1.html
+++ b/page1.html
@@ -35,7 +35,7 @@
                 </h3>
             </header>
             <main>
-                <h3 class="texto-pre">Préfacio</h5>
+                <h3 class="texto-pre">Prefácio</h5>
                     <div class="Prefacio">
                     </div>
                     <h2 class="Projeto">Projetos:</h2>
