--- a/page1.html
+++ b/page1.html
@@ -40,10 +40,31 @@
                     </div>
                     <h2 class="Projeto">Projetos:</h2>
                     <aside>
-                        <button class="retangulo1"></button>
-                        <button class="retangulo2"></button>
-                        <button class="retangulo3"></button>
-                        <button class="retangulo4"></button>
+                        <button class="retangulo1">
+                            <h3 class="Projeto1">
+                                Article Data Structure
+                            </h3>
+                            <img class="imgUni" src="./Images/logo_Unicentro_cor-01.png"></img>
+
+                        </button>
+                        <button class="retangulo2">
+                            <h3 class="Projeto2">
+                                Happy <img class="logo-happy" src="./Images/logo-icon.png">
+                            </h3>
+                            <img class="imgNlw" src="/Images/nlw.png">
+                        </button>
+                        <button class="retangulo3">
+                            <h3 class="Projeto3">
+                                TensorFlow Pokemon Course
+                            </h3>
+                            <img class="imgTensor" src="/images/Tensorflow_logo.svg.png">
+                        </button>
+                        <button class="retangulo4">
+                            <h3 class="Projeto4">
+                                Python lab
+                            </h3>
+                            <img class="imgPython" src="/images/python_logo_icon.png">
+                        </button>
                     </aside>
                     <h2 class="Contatos">Contatos:</h2>
                     <a class="Container-triangle">
