FIX:Resolvendo um problema de img

--- a/page1.html
+++ b/page1.html
@@ -57,13 +57,13 @@
                             <h3 class="Projeto3">
                                 TensorFlow Pokemon Course
                             </h3>
-                            <img class="imgTensor" src="/images/Tensorflow_logo.svg.png">
+                            <img class="imgTensor" src="./images/Tensorflow_logo.svg.png">
                         </button>
                         <button class="retangulo4">
                             <h3 class="Projeto4">
                                 Python lab
                             </h3>
-                            <img class="imgPython" src="/images/python_logo_icon.png">
+                            <img class="imgPython" src="./images/python_logo_icon.png">
                         </button>
                     </aside>
                     <h2 class="Contatos">Contatos:</h2>
