CHORES:Ajustando o botão git

--- a/page1.html
+++ b/page1.html
@@ -68,15 +68,17 @@
                     </aside>
                     <h2 class="Contatos">Contatos:</h2>
                     <a class="Container-triangle">
-                        <button class="Git" onclick="">
-                            <img class="imgGit" src="./Images/Git_image.png" alt="">
-                            Git
-                        </button>
+                        <a href="https://github.com/renan-lemes">
+                            <button class="Git" onclick="">
+                                <img class="imgGit" src="./Images/Git_image.png" alt="">
+                                Git
+                            </button>
+                        </a>
                         <button class="Insta" onclick="">
                             <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
                             Instagram
                         </button>
-                        <button class="Linkedin" onclick="">
+                        <button class="Linkedin" onclick="" href="">
                             <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
                             Linkedin
                         </button>
