CHORES:Arrumando os href

--- a/page1.html
+++ b/page1.html
@@ -40,31 +40,38 @@
                     </div>
                     <h2 class="Projeto">Projetos:</h2>
                     <aside>
-                        <button class="retangulo1">
-                            <h3 class="Projeto1">
-                                Article Data Structure
-                            </h3>
-                            <img class="imgUni" src="./Images/logo_Unicentro_cor-01.png"></img>
-
-                        </button>
-                        <button class="retangulo2">
-                            <h3 class="Projeto2">
-                                Happy <img class="logo-happy" src="./Images/logo-icon.png">
-                            </h3>
-                            <img class="imgNlw" src="/Images/nlw.png">
-                        </button>
-                        <button class="retangulo3">
-                            <h3 class="Projeto3">
-                                TensorFlow Pokemon Course
-                            </h3>
-                            <img class="imgTensor" src="./images/Tensorflow_logo.svg.png">
-                        </button>
-                        <button class="retangulo4">
-                            <h3 class="Projeto4">
-                                Python lab
-                            </h3>
-                            <img class="imgPython" src="./images/python_logo_icon.png">
-                        </button>
+                        <a href="https://github.com/renan-lemes/Article-Data-Structure">
+                            <button class="retangulo1">
+                                <h3 class="Projeto1">
+                                    Article Data Structure
+                                </h3>
+                                <img class="imgUni" src="./Images/logo_Unicentro_cor-01.png"></img>
+                            </button>
+                        </a>
+                        <a href="https://github.com/renan-lemes/Happy">
+                            <button class="retangulo2">
+                                <h3 class="Projeto2">
+                                    Happy <img class="logo-happy" src="./Images/logo-icon.png">
+                                </h3>
+                                <img class="imgNlw" src="/Images/nlw.png">
+                            </button>
+                        </a>
+                        <a href="https://github.com/renan-lemes/TensorFlow-Pokemon-Course">
+                            <button class="retangulo3">
+                                <h3 class="Projeto3">
+                                    TensorFlow Pokemon Course
+                                </h3>
+                                <img class="imgTensor" src="./Images/Tensorflow_logo.svg.png">
+                            </button>
+                        </a>
+                        <a href="https://github.com/renan-lemes/python_labs">
+                            <button class="retangulo4">
+                                <h3 class="Projeto4">
+                                    Python lab
+                                </h3>
+                                <img class="imgPython" src="./Images/python_logo_icon.png">
+                            </button>
+                        </a>
                     </aside>
                     <h2 class="Contatos">Contatos:</h2>
                     <a class="Container-triangle">
@@ -74,10 +81,12 @@
                                 Git
                             </button>
                         </a>
-                        <button class="Insta" onclick="">
-                            <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
-                            Instagram
-                        </button>
+                        <a href="https://www.instagram.com/renan_lemes_leepklan/">
+                            <button class="Insta" onclick="">
+                                <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
+                                Instagram
+                            </button>
+                        </a href="https://www.linkedin.com/in/renan-lemes-leepkaln-b469201bb/">
                         <button class="Linkedin" onclick="" href="">
                             <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
                             Linkedin
