--- a/page1.html
+++ b/page1.html
@@ -86,13 +86,14 @@
                                 <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
                                 Instagram
                             </button>
-                        </a href="https://www.linkedin.com/in/renan-lemes-leepkaln-b469201bb/">
-                        <button class="Linkedin" onclick="" href="">
-                            <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
-                            Linkedin
-                        </button>
-                    </a>
-                    <footer class="cabeçario"></footer>
+                        </a>
+                        <a href="https://www.linkedin.com/in/renan-lemes-leepkaln-b469201bb/">
+                            <button class="Linkedin" onclick="" href="">
+                                <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
+                                Linkedin
+                            </button>
+                        </a>
+                        <footer class="cabeçario"></footer>
             </main>
         </div>
     </div>
