Chores:colocando umas novas class

--- a/page1.html
+++ b/page1.html
@@ -25,7 +25,7 @@
                 <a href="#Projetos">
                     <button class="Projetos" onclick="">Projetos</button>
                 </a>
-                <img src="./Images/Renan_lemes.jpeg" alt="">
+                <img class="img_me" src="./Images/Renan_lemes.jpeg" alt="">
                 <h1>Renan Lemes Leepkaln</h1>
                 <h3 class="texto">Aluno: Matemática Aplicada e Computacional.</h2>
                     <h3 class="texto">Instituição: Universidade Estadual Centro-Oeste.</h3>
