--- a/page1.html
+++ b/page1.html
@@ -25,6 +25,7 @@
                 <a href="#Projetos">
                     <button class="Projetos" onclick="">Projetos</button>
                 </a>
+                <img class="img_back" src="/Images/Novo_teste_Header.png-removebg-preview-removebg-preview.png" alt="">
                 <img class="img_me" src="./Images/Renan_lemes.jpeg" alt="">
                 <h1>Renan Lemes Leepkaln</h1>
                 <h3 class="texto">Aluno: Matemática Aplicada e Computacional.</h2>
