Feat:arrumando o portifolio para ficar dark

--- a/page1.html
+++ b/page1.html
@@ -18,15 +18,19 @@
     <div class="titulo">
         <div class="animate-apper container">
             <header>
-                <button class=" Home" onclick="window.location.reload()">Home</button>
-                <a href="#Contato">
-                    <button class="Contato">Contato</button>
-                </a>
-                <a href="#Projetos">
-                    <button class="Projetos" onclick="">Projetos</button>
-                </a>
-                <img class="img_back" src="/Images/Novo_teste_Header.png-removebg-preview-removebg-preview.png" alt="">
-                <img class="img_me" src="./Images/Renan_lemes.jpeg" alt="">
+                <div class="container-button">
+                    <button class=" Home" onclick="window.location.reload()">Home</button>
+                    <a href="#Contato">
+                        <button class="Contato">Contato</button>
+                    </a>
+                    <a href="#Projetos">
+                        <button class="Projetos" onclick="">Projetos</button>
+                    </a>
+                </div>
+                <!-- <img class="img_back" src="/Images/Novo_teste_Header.png-removebg-preview-removebg-preview.png" alt=""> -->
+                <div class="img-cicle">
+                    <img class="img_me" src="./Images/Renan_lemes.jpeg" alt="">
+                </div>
                 <h1>Renan Lemes Leepkaln</h1>
                 <h3 class="texto">Aluno: Matemática Aplicada e Computacional.</h2>
                     <h3 class="texto">Instituição: Universidade Estadual Centro-Oeste.</h3>
@@ -39,65 +43,73 @@
                 </h3>
             </header>
             <main>
-                <h3 class="texto-pre">Prefácio</h5>
-                    <div class="Prefacio">
-                    </div>
-                    <h2 class="Projeto" id="Projetos">Projetos:</h2>
-                    <aside>
-                        <a href="https://github.com/renan-lemes/Article-Data-Structure">
-                            <button class="retangulo1">
-                                <h3 class="Projeto1">
-                                    Article Data Structure
-                                </h3>
-                                <img class="imgUni" src="./Images/logo_Unicentro_cor-01.png"></img>
-                            </button>
-                        </a>
-                        <a href="https://github.com/renan-lemes/Happy">
-                            <button class="retangulo2">
-                                <h3 class="Projeto2">
-                                    Happy <img class="logo-happy" src="./Images/logo-icon.png">
-                                </h3>
-                                <img class="imgNlw" src="/Images/nlw.png">
-                            </button>
-                        </a>
-                        <a href="https://github.com/renan-lemes/TensorFlow-Pokemon-Course">
-                            <button class="retangulo3">
-                                <h3 class="Projeto3">
-                                    TensorFlow Pokemon Course
-                                </h3>
-                                <img class="imgTensor" src="./Images/Tensorflow_logo.svg.png">
-                            </button>
-                        </a>
-                        <a href="https://github.com/renan-lemes/python_labs">
-                            <button class="retangulo4">
-                                <h3 class="Projeto4">
-                                    Python lab
-                                </h3>
-                                <img class="imgPython" src="./Images/python_logo_icon.png">
-                            </button>
-                        </a>
-                    </aside>
-                    <h2 class="Contatos" id="Contato">Contatos:</h2>
-                    <a class="Container-triangle">
-                        <a href="https://github.com/renan-lemes">
-                            <button class="Git" onclick="">
-                                <img class="imgGit" src="./Images/Git_image.png" alt="">
-                                Git
-                            </button>
-                        </a>
-                        <a href="https://www.instagram.com/renan_lemes_leepklan/">
-                            <button class="Insta" onclick="">
-                                <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
-                                Instagram
-                            </button>
-                        </a>
-                        <a href="https://www.linkedin.com/in/renan-lemes-leepkaln-b469201bb/">
-                            <button class="Linkedin" onclick="" href="">
-                                <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
-                                Linkedin
-                            </button>
-                        </a>
-                        <footer class="cabeçario"></footer>
+                <h3 class="texto-pre">hard skills</h3>
+                <div class="hard-container">
+                    <h4>C++ </h4>
+                    <h4>Python </h4>
+                    <h4>HTML </h4>
+                    <h4>JavaScript </h4>
+                    <h4>CSS</h4>
+                    <h4>SQL</h4>
+                </div>
+                <div class="Prefacio">
+                </div>
+                <h2 class="Projeto" id="Projetos">Projetos:</h2>
+                <aside>
+                    <a href="https://github.com/renan-lemes/Article-Data-Structure">
+                        <button class="retangulo1">
+                            <h3 class="Projeto1">
+                                Article Data Structure
+                            </h3>
+                            <img class="imgUni" src="./Images/logo_Unicentro_cor-01.png"></img>
+                        </button>
+                    </a>
+                    <a href="https://github.com/renan-lemes/Happy">
+                        <button class="retangulo2">
+                            <h3 class="Projeto2">
+                                Happy <img class="logo-happy" src="./Images/logo-icon.png">
+                            </h3>
+                            <img class="imgNlw" src="/Images/nlw.png">
+                        </button>
+                    </a>
+                    <a href="https://github.com/renan-lemes/TensorFlow-Pokemon-Course">
+                        <button class="retangulo3">
+                            <h3 class="Projeto3">
+                                TensorFlow Pokemon Course
+                            </h3>
+                            <img class="imgTensor" src="./Images/Tensorflow_logo.svg.png">
+                        </button>
+                    </a>
+                    <a href="https://github.com/renan-lemes/python_labs">
+                        <button class="retangulo4">
+                            <h3 class="Projeto4">
+                                Python lab
+                            </h3>
+                            <img class="imgPython" src="./Images/python_logo_icon.png">
+                        </button>
+                    </a>
+                </aside>
+                <h2 class="Contatos" id="Contato">Contatos:</h2>
+                <a class="Container-triangle">
+                    <a href="https://github.com/renan-lemes">
+                        <button class="Git" onclick="">
+                            <img class="imgGit" src="./Images/Git_image.png" alt="">
+                            Git
+                        </button>
+                    </a>
+                    <a href="https://www.instagram.com/renan_lemes_leepklan/">
+                        <button class="Insta" onclick="">
+                            <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
+                            Instagram
+                        </button>
+                    </a>
+                    <a href="https://www.linkedin.com/in/renan-lemes-leepkaln-b469201bb/">
+                        <button class="Linkedin" onclick="" href="">
+                            <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
+                            Linkedin
+                        </button>
+                    </a>
+                    <footer class="cabeçario"></footer>
             </main>
         </div>
     </div>
