Feat:arrumando e tirando as estrelas por enquanto

--- a/page1.html
+++ b/page1.html
@@ -18,7 +18,7 @@
     <div class="titulo">
         <div class="animate-apper container">
             <header>
-                <canvas id="stars"></canvas>
+                <!-- <canvas id="stars"></canvas> -->
                 <div class="container-button">
                     <button class=" Home" onclick="window.location.reload()">Home</button>
                     <a href="#Contato">
