Chores:deixando a home page melhor

--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@
     <link rel='stylesheet' href="/CSS/Button.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@100;200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <title>Renan Lemes</title>
+    <title>Renan Lemes </title>
 
 </head>
 
@@ -46,12 +46,12 @@
             <main>
                 <h3 class="texto-pre">hard skills</h3>
                 <div class="hard-container">
-                    <h4>C++ </h4>
-                    <h4>Python </h4>
-                    <h4>HTML </h4>
-                    <h4>JavaScript </h4>
-                    <h4>CSS</h4>
-                    <h4>SQL</h4>
+                    <h4 class="h4-c">C++ </h4>
+                    <h4 class="h4-python">Python </h4>
+                    <h4 class="h4-html"> HTML </h4>
+                    <h4 class="h4-javascript">JavaScript </h4>
+                    <h4 class="h4-css">CSS</h4>
+                    <h4 class="h4-sql">SQL</h4>
                 </div>
                 <div class="Prefacio">
                 </div>
