Chores:arrumando algumas divs

--- a/page1.html
+++ b/page1.html
@@ -57,7 +57,7 @@
                 </div>
                 <h2 class="Projeto" id="Projetos">Projetos:</h2>
                 <aside>
-                    <a href="https://github.com/renan-lemes/Article-Data-Structure">
+                    <a style="text-decoration: none;" href="https://github.com/renan-lemes/Article-Data-Structure">
                         <button class="retangulo1">
                             <h3 class="Projeto1">
                                 Article Data Structure
@@ -65,7 +65,7 @@
                             <img class="imgUni" src="./Images/logo_Unicentro_cor-01.png"></img>
                         </button>
                     </a>
-                    <a href="https://github.com/renan-lemes/Happy">
+                    <a style="text-decoration: none;" href="https://github.com/renan-lemes/Happy">
                         <button class="retangulo2">
                             <h3 class="Projeto2">
                                 Happy <img class="logo-happy" src="./Images/logo-icon.png">
@@ -73,7 +73,7 @@
                             <img class="imgNlw" src="/Images/nlw.png">
                         </button>
                     </a>
-                    <a href="https://github.com/renan-lemes/TensorFlow-Pokemon-Course">
+                    <a style="text-decoration: none;" href="https://github.com/renan-lemes/TensorFlow-Pokemon-Course">
                         <button class="retangulo3">
                             <h3 class="Projeto3">
                                 TensorFlow Pokemon Course
@@ -81,7 +81,7 @@
                             <img class="imgTensor" src="./Images/Tensorflow_logo.svg.png">
                         </button>
                     </a>
-                    <a href="https://github.com/renan-lemes/python_labs">
+                    <a style="text-decoration: none;" href="https://github.com/renan-lemes/python_labs">
                         <button class="retangulo4">
                             <h3 class="Projeto4">
                                 Python lab
@@ -91,25 +91,26 @@
                     </a>
                 </aside>
                 <h2 class="Contatos" id="Contato">Contatos:</h2>
-                <a class="Container-triangle">
-                    <a href="https://github.com/renan-lemes">
+                <div class="Container-triangle">
+                    <a style="text-decoration: none;" href="https://github.com/renan-lemes">
                         <button class="Git" onclick="">
                             <img class="imgGit" src="./Images/Git_image.png" alt="">
                             Git
                         </button>
                     </a>
-                    <a href="https://www.instagram.com/renan_lemes_leepklan/">
+                    <a style="text-decoration: none;" href="https://www.instagram.com/renan_lemes_leepklan/">
                         <button class="Insta" onclick="">
                             <img class="ImgInsta" src="./Images/Icon_instagram.png" alt="">
                             Instagram
                         </button>
                     </a>
-                    <a href="https://www.linkedin.com/in/renan-lemes-leepkaln-b469201bb/">
+                    <a style="text-decoration: none;" href="https://www.linkedin.com/in/renan-lemes-leepkaln-b469201bb/">
                         <button class="Linkedin" onclick="" href="">
                             <img class="imgLink" src="./Images/Icone_linkdin.png" alt="">
                             Linkedin
                         </button>
                     </a>
+                </div>
                     <footer class="cabeçario"></footer>
             </main>
         </div>
