--- a/page1.html
+++ b/page1.html
@@ -31,7 +31,7 @@
                 </div>
                 <!-- <img class="img_back" src="/Images/Novo_teste_Header.png-removebg-preview-removebg-preview.png" alt=""> -->
                 <div class="img-cicle">
-                    <img class="img_me" src="./Images/eu.jpg" alt="">
+                    <img class="img_me" src="./Images/One_robot.png" alt="">
                 </div>
                 
                 <h1>Renan Lemes Leepkaln</h1>
