Chores:arrumando os textos dentro estão muito grande

--- a/page1.html
+++ b/page1.html
@@ -95,7 +95,7 @@
                     <a style="text-decoration: none;" href="https://github.com/renan-lemes/Article-Data-Structure">
                         <button class="retangulo1">
                             <h3 class="Projeto1">
-                                Article Data Structure
+                                Structure of Data
                             </h3>
                             <img class="imgUni" src="./Images/logo_Unicentro_cor-01.png"></img>
                         </button>
@@ -111,7 +111,7 @@
                     <a style="text-decoration: none;" href="https://github.com/renan-lemes/TensorFlow-Pokemon-Course">
                         <button class="retangulo3">
                             <h3 class="Projeto3">
-                                TensorFlow Pokemon Course
+                                TensorFlow Course
                             </h3>
                             <img class="imgTensor" src="./Images/Tensorflow_logo.svg.png">
                         </button>
