--- a/page1.html
+++ b/page1.html
@@ -46,9 +46,11 @@
                 </h3>
                 
             </header>
-            <canvas style=" margin: -30rem 0rem -12rem;" class="star" id="stars"></canvas>
-            <script  src="/scripts/page_projetos.js"></script>
-            <main   >
+            <div class="box-stars">
+                <canvas style=" margin: -30rem 0rem -12rem;" class="star" id="stars"></canvas>
+            </div>
+            <script style="color: #00051F;" src="/scripts/page_projetos.js"></script>
+            <main>
                 <h3 class="texto-pre">hard skills</h3>
                 
                 <div class="hard-container">
@@ -105,7 +107,7 @@
                             <h3 class="Projeto2">
                                 Happy <img class="logo-happy" src="./Images/logo-icon.png">
                             </h3>
-                            <img class="imgNlw" src="/Images/nlw.png">
+                            <img class="imgNlw" src="https://pbs.twimg.com/profile_images/1291682473592659968/sEorc6oh_400x400.jpg">
                         </button>
                     </a>
                     <a style="text-decoration: none;" href="https://github.com/renan-lemes/TensorFlow-Pokemon-Course">
