Chores:arrumando a pagina

--- a/page1.html
+++ b/page1.html
@@ -113,7 +113,7 @@
                     <a style="text-decoration: none;" href="https://github.com/renan-lemes/TensorFlow-Pokemon-Course">
                         <button class="retangulo3">
                             <h3 class="Projeto3">
-                                TensorFlow Course
+                                Curso TensorFlow
                             </h3>
                             <img class="imgTensor" src="./Images/Tensorflow_logo.svg.png">
                         </button>
