Chores:arrumando o html

--- a/page1.html
+++ b/page1.html
@@ -100,6 +100,7 @@
                                 Structure of Data
                             </h3>
                             <img class="imgUni" src="./Images/logo_Unicentro_cor-01.png"></img>
+                            <div class="retangulo1-move"></div>
                         </button>
                     </a>
                     <a style="text-decoration: none;" href="https://github.com/renan-lemes/Happy">
