Chores:arrumando o novo botao da rocket

--- a/page1.html
+++ b/page1.html
@@ -109,6 +109,7 @@
                                 Happy <img class="logo-happy" src="./Images/logo-icon.png">
                             </h3>
                             <img class="imgNlw" src="https://pbs.twimg.com/profile_images/1291682473592659968/sEorc6oh_400x400.jpg">
+                            <div class="retangulo2-move"></div>
                         </button>
                     </a>
                     <a style="text-decoration: none;" href="https://github.com/renan-lemes/TensorFlow-Pokemon-Course">
