Chores:arrumando a pagina principal

--- a/page1.html
+++ b/page1.html
@@ -117,6 +117,7 @@
                                 Curso TensorFlow
                             </h3>
                             <img class="imgTensor" src="./Images/Tensorflow_logo.svg.png">
+                            <div class="retangulo3-move"></div>
                         </button>
                     </a>
                     <a style="text-decoration: none;" href="https://github.com/renan-lemes/python_labs">
