Chores:finalizando os retangulos

--- a/page1.html
+++ b/page1.html
@@ -84,7 +84,6 @@
                     <h4 class="h4-javascript">
                         <p style="padding-top: 3rem;"> Javascript </p>
                         <img class="img_js" src="https://logospng.org/download/javascript/logo-javascript-icon-1024.png" />
-                        
                     </h4>
                     
                 </div>
@@ -126,6 +125,7 @@
                                 Python lab
                             </h3>
                             <img class="imgPython" src="./Images/python_logo_icon.png">
+                            <div class="retangulo4-move"></div>
                         </button>
                     </a>
                 </aside>
