--- a/page1.html
+++ b/page1.html
@@ -59,7 +59,7 @@
                 
                 <div class="hard-container">
                     <!-- Python -->
-                    <div class="skill-item">
+                    <div class="skill-item",>
                         <img class="skill-icon" src="https://cdn-icons-png.flaticon.com/512/2/2181.png" alt="Ícone Python"/>
                         <p class="skill-name">Python</p>
                     </div>
@@ -85,12 +85,16 @@
                     </div>
                 </div>
             </section>
-            
+
+            <div class="div-img-back">
+                <img class="back-img" src="./Images/depoimentos-background-2.png" alt="img-the-space"/>
+            </div>
+
             <section class="projects-section" id="projetos">
                 <h2 class="section-title">Projetos</h2>
                 <aside class="projects-grid">
                     <!-- Projeto 1: Structure of Data -->
-                    <a class="project-card" href="https://github.com/renan-lemes/Article-Data-Structure" target="_blank" rel="noopener noreferrer">
+                    <a class="project-card" href="https://github.com/renan-lemes/Article-Data-Structure" target="_blank" rel="noopener noreferrer", style="background: #00051f65">
                         <div class="card-content">
                             <h3>Structure of Data</h3>
                             <img class="project-logo" src="./Images/logo_Unicentro_cor-01.png" alt="Logo Unicentro">
@@ -98,7 +102,7 @@
                         <div class="card-overlay"></div>
                     </a>
                     <!-- Projeto 2: Happy -->
-                    <a class="project-card" href="https://github.com/renan-lemes/Happy" target="_blank" rel="noopener noreferrer">
+                    <a class="project-card" href="https://github.com/renan-lemes/Happy" target="_blank" rel="noopener noreferrer", style="background: #00051F">
                         <div class="card-content">
                             <h3>Happy <img class="logo-happy" src="./Images/logo-icon.png" alt="Logo Happy"></h3>
                             <img class="project-logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcAJSMu-S_GCNKFAvd868iUKlMFZP1xHTf1AUkDfwBPYAwSYjIAyGr0w8GswzUBWvpuOE&usqp=CAU" alt="Logo NLW">
