estava arrumando as cores dos retangulos estavam no html estava identificando

--- a/page1.html
+++ b/page1.html
@@ -94,7 +94,7 @@
                 <h2 class="section-title">Projetos</h2>
                 <aside class="projects-grid">
                     <!-- Projeto 1: Structure of Data -->
-                    <a class="project-card" href="https://github.com/renan-lemes/Article-Data-Structure" target="_blank" rel="noopener noreferrer", style="background: #00051f65">
+                    <a class="project-card" href="https://github.com/renan-lemes/Article-Data-Structure" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h3>Structure of Data</h3>
                             <img class="project-logo" src="./Images/logo_Unicentro_cor-01.png" alt="Logo Unicentro">
@@ -102,7 +102,7 @@
                         <div class="card-overlay"></div>
                     </a>
                     <!-- Projeto 2: Happy -->
-                    <a class="project-card" href="https://github.com/renan-lemes/Happy" target="_blank" rel="noopener noreferrer", style="background: #00051F">
+                    <a class="project-card" href="https://github.com/renan-lemes/Happy" target="_blank" rel="noopener noreferrer">
                         <div class="card-content">
                             <h3>Happy <img class="logo-happy" src="./Images/logo-icon.png" alt="Logo Happy"></h3>
                             <img class="project-logo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRcAJSMu-S_GCNKFAvd868iUKlMFZP1xHTf1AUkDfwBPYAwSYjIAyGr0w8GswzUBWvpuOE&usqp=CAU" alt="Logo NLW">
